# final-exam-ppt-review-handout

./: .clawhubignore  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  SOP.md  migration-notes.md  verification-checklist.md
examples/: run-example.cmd  sample_config.json  zh_final_exam_config.json
examples/case-study/: README.md
schemas/: handout.schema.json
src/ppt_review_handout/: cli.py  cli_generic.py  cli_v2.py  workflow_cli.py
tests/: test_cli_basics.py  test_docx_renderer.py  test_end_to_end.py
