[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "final-exam-ppt-review-handout"
version = "0.3.0"
description = "Extract PPTX/PPTM decks into structured intermediate files and render caller-authored handout JSON into DOCX/PDF outputs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT-0" }
authors = [{ name = "final-exam-ppt-review-handout contributors" }]
dependencies = [
  "python-pptx>=0.6.23",
  "python-docx>=1.1.0",
]

[project.scripts]
final-exam-ppt-review-handout = "ppt_review_handout.workflow_cli:main"
ppt-review-handout = "ppt_review_handout.workflow_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
